change #689 Chess.com v3: add Tablets design
fix create challenge logic for live games
fix onLiveServiceConnected update

remove unused comments  and code

fix GameTacticsFragment offline mode tactics load

adjust moveToIndicator for ChessBoardView

adjust article images aspect ratio

add ability to use fen for comp game
add ability to use vsComputer game from analysis & tactics

improve common code for GameBaseFragment(LabelsConfig, avatars load)

fix Theme Staunton pieces preview link

update version to 390/3.0.090a